test/conformance/chainsaw/mutating-policies/existing/expression/list/configmaps-assert.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: myns
  labels:
    foo: bar
data:
  key1: value1
